litmask/tests/compile/init_machine_external_against_embedded_seal.stderr
error: init! tier-mismatch: init!(bind_to_machine + provider) unlocks the `machine_external` seal tier, but this build sealed `embedded`; to seal `machine_external`, set LITMASK_MACHINE_ID and LITMASK_UNLOCK_KEY in the build environment where build.rs runs
  --> tests/compile/init_machine_external_against_embedded_seal.rs:14:13
   |
14 |     let _ = init!(bind_to_machine + some_provider);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `init` (in Nightly builds, run with -Z macro-backtrace for more info)
